<resources>
    <string name="app_name">AIFFA STAR</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="string">"@MusicName"</string>
    <string name="profilename">"@lorem_ipsum"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="app_record">Record Video</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="error_server">Make sure your device is connected to a network and then restart the app.</string>
    <string name="error_internet">Please check your internet connection.</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_submit">Submit</string>
    <string name="str_date_of_birth">Date of Birth</string>
    <string name="str_gender">Gender</string>
    <string name="str_name">Name</string>
    <string name="str_bio">Bio</string>
    <string name="str_mobile_no">Mobile No.</string>
    <string name="str_private">Private</string>
    <string name="str_visible_to_me_only">Visible to me only</string>
    <string name="str_share">Share</string>
    <string name="str_email">Email</string>
    <string name="str_caption">Add Suitable title or caption</string>
    <string-array name="countries_array">
        <item>Select Country</item>


































































































        <item>India</item>














































































































































    </string-array>
    <string-array name="state_array">
        <item>Select State</item>
        <item>Maharashtra</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="default_notification_channel_id">AiifaStar</string>
</resources>