<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/groupradioGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_male"
            android:buttonTint="@color/colorPrimary"
            />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_female"
            android:buttonTint="@color/colorPrimary"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_submit"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
</LinearLayout>