<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.efunhub.ticktok.activity.ShareVideoActivity">

    <include
        layout="@layout/toolbar_back"
        />
    <RelativeLayout
        android:id="@+id/top_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                android:id="@+id/crdVideo"
                app:cardUseCompatPadding="true"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:id="@+id/imgVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/nature1"
                    android:scaleType="fitXY"
                    android:layout_margin="10dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play_button"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"/>

            </androidx.cardview.widget.CardView>

            </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <EditText
            android:id="@+id/edtVideoCaption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/str_caption"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:padding="5dp"
            android:gravity="top|left"
            android:layout_above="@+id/linear"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/linear"
            android:layout_alignParentBottom="true" >
            <Button
                android:id="@+id/btnTag"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="30dp"
                android:text="#Tag"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_margin="10dp" />
           <!-- <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:text="Share"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:layout_alignParentBottom="true" />-->

        </LinearLayout>
    </RelativeLayout>
  <!--  <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Location"
            android:layout_margin="10dp"
            android:textSize="16sp"
            />
    </androidx.cardview.widget.CardView>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/crdPrivacySettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Privacy Settings"
            android:layout_margin="10dp"
            android:textSize="16sp"
            />
    </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Public"
                        android:textColor="@color/black">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Visible to everyone">            </TextView>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cbPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_private"
                        android:textColor="@color/black">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_visible_to_me_only">            </TextView>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/cbPrivate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/top_post"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_share"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:visibility="gone"
    android:gravity="center">
    <ProgressBar
        android:id="@+id/mProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ProgressBar>
    <!--add other customize layout components you want-->
</LinearLayout>
</LinearLayout>
